# screenshot_ocr

./: CMakeLists.txt  Notifications.cpp  Notifications.h  README.md  Tray.cpp  Tray.h  Worker.cpp  Worker.h  main.cpp
